crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__array_spread.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"let tuple = [...a, b];\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 22,
                    },
                },
                span: 0..22,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 9,
                                },
                            },
                            span: 4..9,
                            kind: Ident(
                                BindingIdent {
                                    name: "tuple",
                                    mutable: false,
                                    span: 4..9,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 4,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 9,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 12,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 21,
                                    },
                                },
                                span: 12..21,
                                kind: Tuple(
                                    Tuple {
                                        elems: [
                                            ExprOrSpread {
                                                spread: Some(
                                                    13..17,
                                                ),
                                                expr: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 16,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 17,
                                                        },
                                                    },
                                                    span: 16..17,
                                                    kind: Ident(
                                                        Ident {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 16,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 17,
                                                                },
                                                            },
                                                            span: 16..17,
                                                            name: "a",
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                            ExprOrSpread {
                                                spread: None,
                                                expr: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 19,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 20,
                                                        },
                                                    },
                                                    span: 19..20,
                                                    kind: Ident(
                                                        Ident {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 19,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 20,
                                                                },
                                                            },
                                                            span: 19..20,
                                                            name: "b",
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ],
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
